Added icons and colors for more social sites and Removed useless resources.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,15 @@
     <color name="colorPrimaryDark">#D32F2F</color>
 
     <color name="grey">#BEBEBE</color>
+
     <color name="twitter">#23C4FF</color>
     <color name="linkedin">#0077b5</color>
+    <color name="dribble">#ea4c89</color>
+    <color name="behance">#1769ff</color>
+    <color name="github">#4183c4</color>
+
+    <color name="pinterest">#bd081c</color>
+    <color name="deviant_art">#05cc47</color>
 
 
     <color name="white">#FFFFFF</color>
